fixed offcenter

--- a/src/composition/WorkoutList/WorkoutList.css
+++ b/src/composition/WorkoutList/WorkoutList.css
@@ -2,24 +2,23 @@
     background-color: #ece8e8fb;
     color: black;
     display: flex;
-    align-items: center;
-    align-self: center;
+    /* align-items: center; */
+    /* position: absolute; */
+    /* align-self: center; */
     justify-content: space-between;
     border-radius: .3em;
     box-shadow: 1px 1px 2px black, 0 0 35px rgb(191, 191, 218), 0 0 15px rgb(75, 72, 74);
-    margin: 10px;
-    flex-basis: fit-content;
+    /* margin: 10px; */
     
-    width: 100%;
+    width: calc(100% - 3vw);
     padding: 15px;
     list-style: none;
-    font-size: 20px;
-    clear: both;
+    font-size: calc(10px + 1vw);
 }
 
 .workout_span {
     color: black;
-    letter-spacing: .7em;
+    letter-spacing: .3em;
 }
 
 .edit__name {
@@ -53,25 +52,18 @@
 }
 
 .workout-list {
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-    flex-basis: fit-content;
+    
+
+    /* align-content: center; */
+    width: calc(70% - 10vw);
 }
 
 @media only screen and (max-width: 700px) {
-.exercise-add {
-    width: 100%;
-}
+
 .workout-list {
-    font-size: 15px;
-    width: 80%;
-    display: flex;
+    position: relative;
+    left: -30px;
 }
 
 }
-@media only screen and (max-width: 1000px) and (min-width: 700px) {
-    .workout-list {
-        width: 50%;
-    }
-}
+
